
test_suite(
    name = "ocaml_archive",
    tests = [
        # "//aggregators/ocaml_archive/case110:test",
        "//aggregators/ocaml_archive/case114:test",
        "//aggregators/ocaml_archive/case118:test",  ## EXPECTED FAIL
        "//aggregators/ocaml_archive/case120:test",
        "//aggregators/ocaml_archive/case124:test",
        "//aggregators/ocaml_archive/case126:test",
        "//aggregators/ocaml_archive/case200:test",

        "//aggregators/ocaml_archive/case128:test" # KNOWN FAIL
    ]
)
