
test_suite(
    name = "test",
    tests = [
        "//aggregators/ocaml_library/case210:test",
        "//aggregators/ocaml_library/case214:test",
        "//aggregators/ocaml_library/case218:test",
        "//aggregators/ocaml_library/case220:test",
        "//aggregators/ocaml_library/case224:test",
        "//aggregators/ocaml_library/case228:test",
    ]
)
