load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(
    "@rules_ocaml//build:rules.bzl",
    "ocaml_module",
    "ocaml_signature",
    "ocaml_test",
)

string_flag(name="g", build_setting_default="n0")

config_setting(
    name = "n0",
    flag_values = {":g": "n0"},
)

config_setting(
    name = "n1",
    flag_values = {":g": "n1"},
)

ocaml_test(
    name = "test",
    main = ":_Test"
)

## module name will be derived from struct file, so we'll have two
ocaml_module(
    name   = "_Test",
    struct = select({
        ":n0": "test_N0.ml",
        ":n1": "test_N1.ml",
    }),
    opts = ["-w", "-27"],  ## Error (warning 27): unused variable test_ctxt.
    deps = [":mygroup",
            "@ounit2//ounit2"]
)

## module name will be derived from sig srcfile ("Group" in this case)
## struct file will be renamed (by copy) accordingly
ocaml_module(
    name   = "mygroup",
    struct = select({
        ":n0": "group_N0.ml",
        ":n1": "group_N1.ml",
    }),
    sig = "group_cmi",
    opts = ["-w", "-27"],  ## Error (warning 27): unused variable test_ctxt.
    deps = [
        "@ounit2//ounit2",
    ],
)

ocaml_signature(
    name = "group_cmi",
    src = "group.mli",
)

