load(
    "@rules_ocaml//build:rules.bzl",
    "ocaml_binary",
    "ocaml_module",
    "ocaml_test",
)

ocaml_binary(
    name = "main",
    main = ":Main"
)

ocaml_module(
    name   = "Main",
    struct = "main.ml",
    deps = [
        "@ounit2//lib/ounit2",
        "@ocaml//lib/runtime_events"
    ],
)
