load(
    "@rules_ocaml//build:rules.bzl",
    "ocaml_binary",
    "ocaml_module",
    "ocaml_test",
)

ocaml_binary(
    name = "main",
    main = ":Main"
)

ocaml_module(
    name   = "Main",
    struct = "main.ml",
    deps = [
        "@opam.ounit2//lib",
        "@opam.ocamlsdk//runtime_events/lib"
    ],
)
