## Dyadic module: composed of a structfile and a sigfile

test_suite(
    name = "test",
    tests = [
        "//modules/dyadic/selectboth:test",
        "//modules/dyadic/selectsig:test",
        "//modules/dyadic/selectstruct:test",
        "//modules/dyadic/split:test",
        "//modules/dyadic/sigdep_src:test",
        "//modules/dyadic/sigdep_compiled:test",
    ]
)
